force-app/main/default/objects/Mercadorias__c/Mercadorias__c.object-meta.xml
<CustomObject>
    <label>Mercadoria</label>
    <nameField>
        <label>Nome de Mercadorias</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Mercadorias</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>