force-app/main/default/objects/Mercadorias__c/fields/Ativo__c.field-meta.xml
<CustomField>
    <fullName>Ativo__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Marque a caixa se o produto está ativo ou não no sistema</inlineHelpText>
    <label>Ativo</label>
    <type>Checkbox</type>
</CustomField>