force-app/main/default/objects/Mercadorias__c/fields/Categoria__c.field-meta.xml
<CustomField>
    <fullName>Categoria__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Categoria</label>
    <referenceTo>Categoria__c</referenceTo>
    <relationshipLabel>Mercadorias</relationshipLabel>
    <relationshipName>Mercadorias</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>