force-app/main/default/objects/Mercadorias__c/fields/Codigo_do_produto__c.field-meta.xml
<CustomField>
    <fullName>Codigo_do_produto__c</fullName>
    <displayFormat>P-{0000}</displayFormat>
    <label>Código do produto</label>
    <type>AutoNumber</type>
</CustomField>