force-app/main/default/objects/Mercadorias__c/fields/Data_de_cadastro__c.field-meta.xml
<CustomField>
    <fullName>Data_de_cadastro__c</fullName>
    <defaultValue>DATETIMEVALUE(NOW())</defaultValue>
    <label>Data de Entrada</label>
    <required>true</required>
    <type>DateTime</type>
</CustomField>