force-app/main/default/objects/Mercadorias__c/fields/Descricao__c.field-meta.xml
<CustomField>
    <fullName>Descricao__c</fullName>
    <label>Descrição</label>
    <required>true</required>
    <type>TextArea</type>
</CustomField>