force-app/main/default/objects/Mercadorias__c/fields/Descricao_Integracao__c.field-meta.xml
<CustomField>
    <fullName>Descricao_Integracao__c</fullName>
    <label>Descricao Integracao</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>