force-app/main/default/objects/Mercadorias__c/fields/EAN__c.field-meta.xml
<CustomField>
    <fullName>EAN__c</fullName>
    <inlineHelpText>Teste de Integração</inlineHelpText>
    <label>EAN</label>
    <length>30</length>
    <type>Text</type>
</CustomField>