force-app/main/default/objects/Mercadorias__c/fields/Estoque_minimo__c.field-meta.xml
<CustomField>
    <fullName>Estoque_minimo__c</fullName>
    <description>Estoque de segurança do produto</description>
    <inlineHelpText>Informe aqui o estoque mínimo definido para o produto</inlineHelpText>
    <label>Estoque mínimo</label>
    <precision>18</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>