force-app/main/default/objects/Mercadorias__c/fields/Preco__c.field-meta.xml
<CustomField>
    <fullName>Preco__c</fullName>
    <label>Preço</label>
    <precision>8</precision>
    <required>true</required>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>