force-app/main/default/objects/Mercadorias__c/fields/Quantidade__c.field-meta.xml
<CustomField>
    <fullName>Quantidade__c</fullName>
    <description>Quantidade de produtos que estão entrando no estoque</description>
    <inlineHelpText>Insira a quantidade de produtos a sem adicionados</inlineHelpText>
    <label>Quantidade</label>
    <precision>10</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>