force-app/main/default/objects/Mercadorias__c/fields/Url_Imagem__c.field-meta.xml
<CustomField>
    <fullName>Url_Imagem__c</fullName>
    <label>Url Imagem</label>
    <length>400</length>
    <type>LongTextArea</type>
</CustomField>